fixed alignment of the team section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -473,6 +473,7 @@ background: url("https://pbs.twimg.com/ext_tw_video_thumb/1248732574224207872/pu
   bottom: 0;
   min-width: 100%; 
   min-height: 100%;
+  padding-left: 5px;
 }
 .home-page-text-container {
   position: absolute; 
@@ -604,6 +605,7 @@ background: url("https://pbs.twimg.com/ext_tw_video_thumb/1248732574224207872/pu
 .slider{
   max-width: 100%;
   display: flex;
+  margin-left: 70px;
 
 }
 .card{
